add some code more

--- a/index.html
+++ b/index.html
@@ -12,5 +12,9 @@
 
    <h2>mama add some new code</h2>
    <h3>the new code is Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur!</h3>
+
+<p>I am coding coding and coding</p>
+<h1>mama it is so easy right now try to use a css file ok</h1>
+
 </body>
 </html>
