--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>so you are nice just nice and let's code your career</title>
+   <link rel="stylesheet" href="style.css">
 </head>
 <body>
    <h1>so mamun you are in new personality</h1> 
@@ -15,6 +16,6 @@
 
 <p>I am coding coding and coding</p>
 <h1>mama it is so easy right now try to use a css file ok</h1>
-
+<p>masum is a textile engineer, Lorem ipsum dolor sit.</p>
 </body>
 </html>
