this is git bush command

--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
 <p>masum is a textile engineer, Lorem ipsum dolor sit.</p>
 
 <h5>something happed in my mind, may be I am fall in love with code</h5>
+<strong>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut provident illum quam porro eum neque omnis sint aliquam enim, eos ullam necessitatibus magni, saepe reprehenderit nemo doloribus ipsa. Vitae unde laudantium consequatur distinctio cumque aspernatur assumenda eum non hic quidem quaerat repudiandae ut ea nulla nostrum, amet temporibus quae! Aliquid.</strong>
 </body>
 </html>
